--- a/product2.html
+++ b/product2.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Страница товара</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
-</head>
-<body>
+  </head>
+  <body>
     <div class="product-detail">
-        <img src="2.jpg" alt="Acer Aspire 5" class="large-image">
-        <h2>Acer Aspire 5</h2>
-        <h3>Подробное описание</h3>
-        <p>Acer Aspire 5 с процессором Intel N4500, 4 ГБ оперативной памяти и 256 ГБ M.2 NVMe PCIe обеспечивает высокую производительность и надежность. Подходит для мультимедийных задач и работы с документами.</p>
-        <p class="price"><strong>Цена: 21 432 сом</strong></p>
-        <button id="add-to-cart">Добавить в корзину</button>
+      <img src="2.jpg" alt="Acer Aspire 5" class="large-image" />
+      <h2>Acer Aspire 5</h2>
+      <h3>Подробное описание</h3>
+      <p>
+        Acer Aspire 5 с процессором Intel N4500, 4 ГБ оперативной памяти и 256
+        ГБ M.2 NVMe PCIe обеспечивает высокую производительность и надежность.
+        Подходит для мультимедийных задач и работы с документами.
+      </p>
+      <p class="price"><strong>Цена: 21 432 сом</strong></p>
+      <button id="add-to-cart">Добавить в корзину</button>
     </div>
     <div id="notification" class="notification">Товар добавлен в корзину!</div>
-</body>
+  </body>
 </html>
