--- a/product4.html
+++ b/product4.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Страница товара</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
-</head>
-<body>
+  </head>
+  <body>
     <div class="product-detail">
-        <img src="4.jpg" alt="Asus Predator Gaming Super Pro" class="large-image">
-        <h2>Asus Predator Gaming Super Pro</h2>
-        <h3>Подробное описание</h3>
-        <p>Asus Predator Gaming Super Pro с процессором N4020, 4 ГБ оперативной памяти и 240 ГБ SSD обеспечивает высокую производительность и надежность. Этот ноутбук идеально подходит для игр и работы с графикой.</p>
-        <p class="price"><strong>Цена: 27 054 сом</strong></p>
-        <button id="add-to-cart">Добавить в корзину</button>
+      <img src="4.jpg" alt="Asus Predator Gaming Super Pro" class="large-image" />
+      <h2>Asus Predator Gaming Super Pro</h2>
+      <h3>Подробное описание</h3>
+      <p>
+        Asus Predator Gaming Super Pro с процессором N4020, 4 ГБ оперативной
+        памяти и 240 ГБ SSD обеспечивает высокую производительность и
+        надежность. Этот ноутбук идеально подходит для игр и работы с графикой.
+      </p>
+      <p class="price"><strong>Цена: 27 054 сом</strong></p>
+      <button id="add-to-cart">Добавить в корзину</button>
     </div>
     <div id="notification" class="notification">Товар добавлен в корзину!</div>
-</body>
+  </body>
 </html>
