--- a/product6.html
+++ b/product6.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Страница товара</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
-</head>
-<body>
+  </head>
+  <body>
     <div class="product-detail">
-        <img src="6.jpg" alt="Lenovo Legion Pro 7i Gen 9" class="large-image">
-        <h2>Lenovo Legion Pro 7i Gen 9</h2>
-        <h3>Подробное описание</h3>
-        <p>Lenovo Legion Pro 7i Gen 9 с процессором Intel N4500, 4 ГБ оперативной памяти и 500 ГБ M.2 NVMe PCIe SSD обеспечивает высокую производительность и надежность. Этот ноутбук идеально подходит для игр и мультимедийных задач.</p>
-        <p class="price"> <strong>Цена: 29 999 сом</strong></p>
-        <button id="add-to-cart">Добавить в корзину</button>
+      <img src="6.jpg" alt="Lenovo Legion Pro 7i Gen 9" class="large-image" />
+      <h2>Lenovo Legion Pro 7i Gen 9</h2>
+      <h3>Подробное описание</h3>
+      <p>
+        Lenovo Legion Pro 7i Gen 9 с процессором Intel N4500, 4 ГБ оперативной
+        памяти и 500 ГБ M.2 NVMe PCIe SSD обеспечивает высокую
+        производительность и надежность. Этот ноутбук идеально подходит для игр
+        и мультимедийных задач.
+      </p>
+      <p class="price"><strong>Цена: 29 999 сом</strong></p>
+      <button id="add-to-cart">Добавить в корзину</button>
     </div>
     <div id="notification" class="notification">Товар добавлен в корзину!</div>
-</body>
+  </body>
 </html>
